--- a/client/frontapp/src/app/auth/login/login.component.css
+++ b/client/frontapp/src/app/auth/login/login.component.css
@@ -1,7 +1,9 @@
 .example-form {
-  min-width: 150px;
   max-width: 500px;
-  width: 100%;
+  padding: 100px;
+  margin: auto;
+  background: grey;
+  display: block;
 }
 
 .example-full-width {
