--- a/client/frontapp/src/app/auth/login/login.component.html
+++ b/client/frontapp/src/app/auth/login/login.component.html
@@ -1,9 +1,40 @@
-<form class="example-form">
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="Favorite food" value="Sushi" />
-  </mat-form-field>
+<form class="example-form" (submit)="login()">
+  <div>
+    <mat-form-field>
+      <input
+        matInput
+        placeholder="E-Mail or UserName"
+        type="text"
+        name="loginmodel.email"
+        [(ngModel)]="loginmodel.email"
+        #myControl="ngModel"
+        required
+      />
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-form-field>
+      <input
+        matInput
+        placeholder="Password"
+        type="password"
+        name="loginmodel.password"
+        #myControl="ngModel"
+        [(ngModel)]="loginmodel.password"
+        required
+      />
+    </mat-form-field>
+  </div>
 
-  <mat-form-field class="example-full-width">
-    <textarea matInput placeholder="Leave a comment"></textarea>
-  </mat-form-field>
+  <div>
+    <button
+      color="primary"
+      mat-raised-button
+      type="submit"
+      value="submit"
+      [disabled]="!myControl.valid"
+    >
+      SIGN IN
+    </button>
+  </div>
 </form>
