--- a/client/frontapp/src/app/user/usermain/usermain.component.html
+++ b/client/frontapp/src/app/user/usermain/usermain.component.html
@@ -1,2 +1,6 @@
-<app-toolbar></app-toolbar>
-<router-outlet> </router-outlet>
+<mat-sidenav-container class="admin-container">
+  <div class="content-container" fxLayout="column">
+    <app-toolbar></app-toolbar>
+    <router-outlet> </router-outlet>
+  </div>
+</mat-sidenav-container>
