--- a/client/frontapp/src/app/user/toolbar/toolbar.component.html
+++ b/client/frontapp/src/app/user/toolbar/toolbar.component.html
@@ -2,58 +2,18 @@
   <button mat-icon-button class="toggleBtn" (click)="toggleMenu()">
     <mat-icon>dehaze</mat-icon>
   </button>
-  <div
-    fxLayout="row"
-    fxLayoutAlign="start center"
-    fxFlex="400px"
-    fxHide
-    fxShow.gt-md
-  >
-    <div class="logo" [routerLink]="['/']">
-      <img
-        src="../../../assets/logo.png"
-        class="ofc-logo"
-        alt="Times Square FoodLand"
-      />
-    </div>
+  <div fxLayout="row" fxLayoutAlign="start center" fxFlex="400px">
+    <div class="logo" [routerLink]="['/']"><h1>Sunrise Foodland</h1></div>
   </div>
 
   <span fxFlex></span>
-  <button
-    mat-button
-    fxHide
-    fxShow.gt-xs
-    class="menu-header"
-    [routerLink]="['/']"
-  >
-    Home
-  </button>
-  <button
-    mat-button
-    fxHide
-    fxShow.gt-xs
-    class="menu-header"
-    [routerLink]="['/menu']"
-  >
-    Menu
-  </button>
+  <button mat-button class="menu-header" [routerLink]="['/']">Home</button>
+  <button mat-button class="menu-header" [routerLink]="['/menu']">Menu</button>
 
-  <button
-    mat-button
-    fxHide
-    fxShow.gt-xs
-    class="menu-header"
-    [routerLink]="['/aboutus']"
-  >
+  <button mat-button class="menu-header" [routerLink]="['/aboutus']">
     About us
   </button>
-  <button
-    mat-button
-    fxHide
-    fxShow.gt-xs
-    class="menu-header"
-    [routerLink]="['/contact']"
-  >
+  <button mat-button class="menu-header" [routerLink]="['/contact']">
     Contact
   </button>
   <button
