--- a/client/frontapp/src/app/user/usermain/usermain.component.scss
+++ b/client/frontapp/src/app/user/usermain/usermain.component.scss
@@ -1,46 +1,9 @@
-.main-toolbar {
-    background: #795548;
-    padding-right: 0;
-    height: 64px;
-    padding-left: 16px;
-  
-    .user-button-container {
-      height: 100%;
-    }
-  
-    button.fullscreen-toggle {
-      border-radius: 0;
-      padding: 0;
-      min-width: 50px;
-      max-width: 50px;
-      height: 100%;
-    }
-  
-    button.menu-header {
-      border-radius: 0;
-      padding: 0 2px 0px 0px;
-      min-width: 80px;
-      max-width: 150px;
-      height: 100%;
-      color: white ;
-    }
-  .menucolor{
-    color: #795548 ;
+.content-container {
+  height: 100%;
+}
+
+@media screen and (min-width: 960px) {
+  .mat-drawer-backdrop {
+    z-index: 50 !important;
   }
-  @media screen and (max-width: 959px) {
-    .mat-sidenav.quickpanel {
-      width: 250px;
-      min-width: 250px;
-      max-width: 250px;
-    }
-  
-    button.user-button {
-      min-width: 72px;
-    }
-  }
-  
-  @media screen and (min-width: 960px) {
-    .mat-drawer-backdrop {
-      z-index: 50 !important;
-    }
-  }
+}
