redesign new added component, added mock api, extra setting, global services

--- a/client/frontapp/src/app/user/menumain/menumain.component.html
+++ b/client/frontapp/src/app/user/menumain/menumain.component.html
@@ -1,3 +1,10 @@
-<p>
-  menumain works!
-</p>
+<div
+  class="dashboard-container"
+  fxLayout="column"
+  fxLayoutAlign="start stretch"
+>
+  <div><app-menutab></app-menutab></div>
+  <div class="sidepanel" *ngIf="showSidePanel">
+    <app-sidepanel></app-sidepanel>
+  </div>
+</div>
