added css for menu display

--- a/client/frontapp/src/app/user/toolbar/toolbar.component.scss
+++ b/client/frontapp/src/app/user/toolbar/toolbar.component.scss
@@ -29,7 +29,7 @@
     color: white;
   }
   .menucolor {
-    color: #795548;
+    color:  #b54f2a;
   }
 }
 
@@ -44,7 +44,7 @@
 .itemnumber {
   font-weight: bolder;
   font-size: 14px;
-  background: #795548;
+  background: #b54f2a;
   color: white;
   min-width: 150px;
   border-radius: 20px;
@@ -55,7 +55,7 @@
   font-size: 24px;
   padding-left: 10px;
   font-weight: 400;
-  color: #795548;
+  color: #b54f2a;
 }
 .toolbar-logoClick {
   text-decoration: none;
@@ -68,7 +68,7 @@
   height: 100vh;
   width: 220px;
   transform: translate3d(-100%, 0, 0);
-  background: #795548;
+  background: #b54f2a;
   top: 0;
   left: 0;
   z-index: 1000;
