--- a/client/frontapp/src/app/user/menutab/menutab.component.html
+++ b/client/frontapp/src/app/user/menutab/menutab.component.html
@@ -1,1 +1,8 @@
-<p>menutabs works</p>
+<div class="menu-tab" [@showOrderPanel]="showOrderPanel">
+  <mat-tab-group (selectedTabChange)="loadMenubyCategory($event)">
+    <mat-tab
+      *ngFor="let category of categories"
+      label="{{category.categoryId}}"
+    ></mat-tab>
+  </mat-tab-group>
+</div>
