--- a/client/frontapp/src/app/user/usermain/usermain.component.html
+++ b/client/frontapp/src/app/user/usermain/usermain.component.html
@@ -2,5 +2,8 @@
   <div class="content-container" fxLayout="column">
     <app-toolbar></app-toolbar>
     <router-outlet> </router-outlet>
+    <div class="loader" *ngIf="showLoader">
+      <div class="spinner"><mat-spinner color="brown"> </mat-spinner></div>
+    </div>
   </div>
 </mat-sidenav-container>
