--- a/client/frontapp/src/app/user/menumain/menumain.component.html
+++ b/client/frontapp/src/app/user/menumain/menumain.component.html
@@ -3,8 +3,8 @@
   fxLayout="column"
   fxLayoutAlign="start stretch"
 >
-  <div><app-menutab></app-menutab></div>
-  <div class="sidepanel" *ngIf="showSidePanel">
-    <app-sidepanel></app-sidepanel>
+  <div><app-menutab ></app-menutab></div>
+  <div class="sidepanel">
+    <app-sidepanel [showSidePanel]="showSidePanel" *ngIf="showSidePanel"></app-sidepanel>
   </div>
 </div>
