--- a/client/frontapp/src/app/user/menumain/menumain.component.scss
+++ b/client/frontapp/src/app/user/menumain/menumain.component.scss
@@ -12,3 +12,35 @@
 .margin-top {
   margin-top: 12px;
 }
+
+@media screen and (min-width: 601px) {
+  .sidepanel {
+    -webkit-flex: 0 0 auto;
+    flex: 0 0 auto;
+    background-color: transparent;
+    border-left: 0;
+    position: fixed;
+    -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    will-change: width;
+    right: 6px;
+    width: 350px;
+    z-index: 100;
+    height: 100%;
+    margin-top: -20px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .sidepanel {
+    -webkit-flex: 0 0 auto;
+    flex: 0 0 auto;
+    background-color: transparent;
+    border-left: 0;
+    -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    will-change: width;
+    width: 350px;
+    z-index: 100;
+    height: 100%;
+  }
+}
