--- a/client/frontapp/src/app/user/menutab/menutab.component.scss
+++ b/client/frontapp/src/app/user/menutab/menutab.component.scss
@@ -2,7 +2,7 @@
   padding: 0px;
   flex-wrap: wrap;
   /* min-height: 800px; */
-  color: #795548;
+  color: #c26847;
   margin-left: -5px;
   margin-right: -5px;
   margin-top: 5px;
@@ -25,7 +25,7 @@
 }
 
 .mat-card-title {
-  color: #795548 !important;
+  color: #c26847 !important;
 }
 
 @media screen and (min-width: 900px) {
@@ -65,11 +65,11 @@ img {
   font-size: 18px;
   font-weight: 500;
   padding: 8px;
-  color: #795548;
+  color: #c26847;
 }
 
 .menu-button {
-  background-color: #8e746b;
+  background-color: #c26847;
   color: white;
 }
 .menu-footer {
