--- a/client/frontapp/src/app/user/sidepanel/sidepanel.component.html
+++ b/client/frontapp/src/app/user/sidepanel/sidepanel.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="orderbody">
       <div fxFlex class="mat-elevation-z2">
-        <ms-scrollbar>
+        <app-scrollbar>
           <table
             class="table"
             [class.table-hover]="tableHover"
@@ -31,17 +31,6 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let row of orderLineList">
-                <td>{{ row.SizeId }} {{ row.TypeId }} {{ row.DishId }}</td>
-                <td>{{ row.Qty }}</td>
-                <td>{{ row.Amount }}</td>
-                <td class="icon">
-                  <i
-                    class="fa fa-times remove"
-                    (click)="removeItemFromCart(row)"
-                  ></i>
-                </td>
-              </tr>
               <tr>
                 <td class="taxable">Subtotal Amount</td>
                 <td>-</td>
@@ -74,7 +63,7 @@
               </tr>
             </tbody>
           </table>
-        </ms-scrollbar>
+        </app-scrollbar>
       </div>
     </div>
   </div>
