--- a/client/frontapp/src/app/user/menutab/menutab.component.html
+++ b/client/frontapp/src/app/user/menutab/menutab.component.html
@@ -9,8 +9,8 @@
     <div class="menuContainer" fxLayout="row" fxLayoutAlign="start center">
       <div class="menu" fxFlex="25" *ngFor="let dish of selectedDishList">
         <div class="menuInner">
-          <div class="menu-name">{{ dish.Name }}</div>
-          <div class="item"><img src="{{dish.Image}}" /></div>
+          <div class="menu-name">{{ dish.name }}</div>
+          <div class="item"><img src="{{dish.image}}" /></div>
           <div class="description">{{ dish.Description }}</div>
           <div class="menu-footer" div fxLayout="row" fxLayoutAlign="end none">
             <button
