item component css work out

--- a/client/frontapp/src/app/user/item-select-popup/item-select-popup.component.html
+++ b/client/frontapp/src/app/user/item-select-popup/item-select-popup.component.html
@@ -1,3 +1,66 @@
-<p>
-  item-select-popup works!
-</p>
+<mat-card-title>
+  <div class="title">{{ selectedDish.name }}</div>
+</mat-card-title>
+<mat-divider></mat-divider>
+<mat-card-content fxLayout="column">
+  <div class="topcontent" fxLayout="row">
+    <div class="content-left" fxFlex="40">
+      <div class="imageconatiner"><img src="{{itemimage}}" /></div>
+    </div>
+
+    <div class="content-right" fxFlex="40">
+      <h3>Description</h3>
+      {{ description }}
+      <hr />
+      <h3>Ingredients</h3>
+      {{ ingredientsDisplayText }}
+    </div>
+  </div>
+  <mat-radio-group>
+    <mat-radio-button value="1">Option 1</mat-radio-button>
+    <mat-radio-button value="2">Option 2</mat-radio-button>
+  </mat-radio-group>
+  <div>
+    <span style="color:blue">{{ message }}</span>
+  </div>
+
+  <div class="popupfooter" fxLayout="row">
+    <div class="changeqtyicon" fxFlex="45">
+      <div class="countholder">
+        <button
+          mat-icon-button
+          mat-mini-fab
+          color="primary"
+          (click)="changeQuantity(-1)"
+        >
+          <mat-icon> remove</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          mat-mini-fab
+          color="primary"
+          (click)="changeQuantity(1)"
+        >
+          <mat-icon> add</mat-icon>
+        </button>
+        <p class="i floatright">
+          <span class="sount">Rs. {{ selectedItemSize.price * qty }} </span>
+        </p>
+      </div>
+    </div>
+
+    <div class="addtocardbutton" fxFlex="55">
+      <button
+        mat-raised-button
+        color="primary"
+        class="addbutton"
+        (click)="addItemToCart()"
+      >
+        <div class="float-left btn-badge-cont ng-binding" color="assent">
+          {{ qty }}
+        </div>
+        Add To Cart
+      </button>
+    </div>
+  </div>
+</mat-card-content>
