--- a/client/frontapp/src/app/user/item-select-popup/item-select-popup.component.html
+++ b/client/frontapp/src/app/user/item-select-popup/item-select-popup.component.html
@@ -4,11 +4,51 @@
 <mat-divider></mat-divider>
 <mat-card-content fxLayout="column">
   <div class="topcontent" fxLayout="row">
-    <div class="content-left" fxFlex="40">
+    <div class="content-left" fxFlex="55">
       <div class="imageconatiner"><img src="{{itemimage}}" /></div>
+      <mat-dialog-actions>
+        <mat-radio-group
+          class="example-radio-group"
+          [(ngModel)]="selectedItemType"
+        >
+          <strong
+            >Select Dish
+            Type&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong
+          >
+          <mat-radio-button
+            class="example-radio-button"
+            *ngFor="
+              let productType of selectedDish.types;
+              let idx = index
+            "
+            [value]="productType"
+            [checked]="idx === 0"
+            (change)="dishChanges($event)"
+          >
+            {{ productType.name }}
+          </mat-radio-button>
+        </mat-radio-group>
+        <mat-radio-group
+          class="example-radio-group"
+          [(ngModel)]="selectedItemSize"
+        >
+          <strong>Select Dish Size</strong>
+          <mat-radio-button
+            class="example-radio-button"
+            *ngFor="
+              let productSize of selectedItemType.sizes;
+              let idx = index
+            "
+            [value]="productSize"
+            [checked]="idx === 0"
+          >
+            {{ productSize.name }}
+          </mat-radio-button>
+        </mat-radio-group>
+      </mat-dialog-actions>
     </div>
 
-    <div class="content-right" fxFlex="40">
+    <div class="content-right" fxFlex="45">
       <h3>Description</h3>
       {{ description }}
       <hr />
@@ -16,10 +56,6 @@
       {{ ingredientsDisplayText }}
     </div>
   </div>
-  <mat-radio-group>
-    <mat-radio-button value="1">Option 1</mat-radio-button>
-    <mat-radio-button value="2">Option 2</mat-radio-button>
-  </mat-radio-group>
   <div>
     <span style="color:blue">{{ message }}</span>
   </div>
