--- a/client/frontapp/src/styles/_misc.scss
+++ b/client/frontapp/src/styles/_misc.scss
@@ -1,9 +1,10 @@
-html, body {
+html,
+body {
   min-height: 100%;
   height: 100%;
   line-height: normal;
-  font-family: Roboto, 'Helvetica Neue', Arial, sans-serif;
-
+  font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+  margin: 0;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   -webkit-text-size-adjust: 100%;
@@ -36,7 +37,7 @@ code {
 
 // DEMO STYLES
 .demo-preview {
-  background: #F2F2F2;
+  background: #f2f2f2;
 
   button {
     //margin: 12px;
@@ -55,7 +56,10 @@ code {
   }
 }
 
-h3, h4, h5, p {
+h3,
+h4,
+h5,
+p {
   margin: 0 0 16px;
 }
 
@@ -82,7 +86,8 @@ p {
   vertical-align: text-bottom;
 }
 
-[mat-prefix] > mat-icon, [mat-suffix] > mat-icon {
+[mat-prefix] > mat-icon,
+[mat-suffix] > mat-icon {
   font-size: 18px;
   vertical-align: middle;
   height: 16px;
@@ -91,7 +96,7 @@ p {
 
 .demo-list {
   margin: 24px 0;
-  background: #FFF;
+  background: #fff;
   width: 350px;
 }
 
@@ -147,9 +152,15 @@ p {
 }
 
 @keyframes rainbow {
-  0%{background-position:0% 82%}
-  50%{background-position:100% 19%}
-  100%{background-position:0% 82%}
+  0% {
+    background-position: 0% 82%;
+  }
+  50% {
+    background-position: 100% 19%;
+  }
+  100% {
+    background-position: 0% 82%;
+  }
 }
 
 .buy-now-toolbar {
@@ -164,12 +175,23 @@ p {
   .rainbow {
     height: 100%;
     width: 100%;
-    left:0;
+    left: 0;
     right: 0;
     top: 0;
     bottom: 0;
     position: absolute;
-    background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+    background: linear-gradient(
+      124deg,
+      #ff2400,
+      #e81d1d,
+      #e8b71d,
+      #e3e81d,
+      #1de840,
+      #1ddde8,
+      #2b1de8,
+      #dd00f3,
+      #dd00f3
+    );
     background-size: 1800% 1800%;
     animation: rainbow 18s ease infinite;
     padding: 0 24px;
@@ -197,5 +219,4 @@ p {
       text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
     }
   }
-
 }
