--- a/client/frontapp/src/app/admin/order/order.component.html
+++ b/client/frontapp/src/app/admin/order/order.component.html
@@ -1,3 +1,43 @@
-<p>
-  order works!
-</p>
+
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="_id">
+    <th mat-header-cell *matHeaderCellDef> Id </th>
+    <td mat-cell *matCellDef="let element"> {{element._id}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="totalAmount">
+    <th mat-header-cell *matHeaderCellDef> Total Amount </th>
+    <td mat-cell *matCellDef="let element"> {{element.totalAmount}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="userid">
+    <th mat-header-cell *matHeaderCellDef> UserId </th>
+    <td mat-cell *matCellDef="let element"> {{element.userid}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="discount">
+    <th mat-header-cell *matHeaderCellDef> discount </th>
+    <td mat-cell *matCellDef="let element"> {{element.discount}} </td>
+  </ng-container>
+
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef> status </th>
+      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+    </ng-container>
+
+ 
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
