--- a/client/frontapp/src/app/admin/dish/dish.component.html
+++ b/client/frontapp/src/app/admin/dish/dish.component.html
@@ -1,3 +1,31 @@
-<p>
-  dish works!
-</p>
+<form #f="ngForm" (ngSubmit)="onSubmit(f.value)">
+    <p>
+      <mat-form-field>
+        <input matInput placeholder="Name">
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field>
+        <textarea matInput placeholder="Description"></textarea>
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field>
+        <input matInput placeholder="Order in Menu">
+      </mat-form-field>
+    </p>
+  <p>
+    <mat-form-field>
+      <input matInput placeholder="Unit">
+    </mat-form-field>
+  </p>
+  <p>
+    <mat-form-field>
+      <mat-select placeholder="Category">
+        <mat-option *ngFor="let c of categories" value="{{c}}">{{c}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </p>
+  <button mat-button>Save</button>
+  </form>
+  
