--- a/client/frontapp/src/styles.scss
+++ b/client/frontapp/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 /* You can add global styles to this file, and also import other style files */
+@import url('//fonts.googleapis.com/icon?family=Material+Icons');
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700");
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "styles/_var.scss";
@@ -10,6 +11,7 @@
 @import "styles/_calendar.scss";
 @import "styles/_misc.scss";
 @import "~@angular/material/theming";
+
 @include mat-core();
 @keyframes pageLoad {
   from {
@@ -20,6 +22,9 @@
     opacity: 0;
   }
 }
+$primary: mat-palette($mat-indigo, 500);
+$accent:  mat-palette($mat-pink, 500, A200, A400);
+$warn:    mat-palette($mat-red, 500);
 
 .page-load-animation {
   opacity: 1;
