--- a/client/frontapp/src/app/user/menumain/menumain.component.html
+++ b/client/frontapp/src/app/user/menumain/menumain.component.html
@@ -4,7 +4,7 @@
   fxLayoutAlign="start stretch"
 >
   <div><app-menutab ></app-menutab></div>
-  <div class="sidepanel">
-    <app-sidepanel [showSidePanel]="showSidePanel" *ngIf="showSidePanel"></app-sidepanel>
+  <div class="sidepanel" *ngIf="showSidePanel">
+    <app-sidepanel [showSidePanel]="showSidePanel" ></app-sidepanel>
   </div>
 </div>
