--- a/client/frontapp/src/app/admin/dishlist/add/add.dialog.html
+++ b/client/frontapp/src/app/admin/dishlist/add/add.dialog.html
@@ -1,65 +1,140 @@
 <div class="container">
   <h3 mat-dialog-title>Add new Dish</h3>
 
-  <form class="mat-dialog-content" (ngSubmit)="submit" #formControl="ngForm">
-
+  <form class="mat-dialog-content" (ngSubmit)="(submit)" #formControl="ngForm">
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput #name class="form-control" placeholder="name" [(ngModel)]="data.name" name="name" required >
-        <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
+        <input
+          matInput
+          #name
+          class="form-control"
+          placeholder="name"
+          [(ngModel)]="data.name"
+          name="name"
+          required
+        />
+        <mat-error *ngIf="formControl.invalid">{{
+          getErrorMessage()
+        }}</mat-error>
       </mat-form-field>
     </div>
 
     <!--Textarea for demo purposes-->
     <div class="form">
       <mat-form-field color="accent">
-        <textarea matInput #description class="form-control" placeholder="description" [(ngModel)]="data.description" name="description" required ></textarea>
-        <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
+        <textarea
+          matInput
+          #description
+          class="form-control"
+          placeholder="description"
+          [(ngModel)]="data.description"
+          name="description"
+          required
+        ></textarea>
+        <mat-error *ngIf="formControl.invalid">{{
+          getErrorMessage()
+        }}</mat-error>
       </mat-form-field>
     </div>
 
     <!--Contains mat-hint for characters count and has maxLengt set-->
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput #orderingPosition class="form-control" placeholder="orderingPosition" [(ngModel)]="data.orderingPosition" name="orderingPosition" maxlength="10" required >
-        <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
-        <mat-hint align="end">{{orderingPosition.value?.length || 0}}/10</mat-hint>
+        <input
+          matInput
+          #orderingPosition
+          class="form-control"
+          placeholder="orderingPosition"
+          [(ngModel)]="data.orderingPosition"
+          name="orderingPosition"
+          maxlength="10"
+          required
+        />
+        <mat-error *ngIf="formControl.invalid">{{
+          getErrorMessage()
+        }}</mat-error>
+        <mat-hint align="end"
+          >{{ orderingPosition.value?.length || 0 }}/10</mat-hint
+        >
       </mat-form-field>
     </div>
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput #uom placeholder="uom" [(ngModel)]="data.uom" name="uom">
+        <input
+          matInput
+          #uom
+          placeholder="uom"
+          [(ngModel)]="data.uom"
+          name="uom"
+        />
       </mat-form-field>
     </div>
 
     <div class="form">
       <mat-form-field color="accent">
-        <mat-select ngModel #category="ngModel" [(ngModel)]="data.category" name="category" placeholder="Category">
-          <mat-option *ngFor="let c of categories" value="{{c}}">{{c}}</mat-option>
+        <mat-select
+          ngModel
+          #category="ngModel"
+          [(ngModel)]="data.category"
+          name="category"
+          placeholder="Category"
+        >
+          <mat-option *ngFor="let c of categories" value="{{ c }}">{{
+            c
+          }}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput ngModel #type="ngModel" [(ngModel)]="data.type" name="type" placeholder="Type">
+        <input
+          matInput
+          ngModel
+          #type="ngModel"
+          [(ngModel)]="data.type"
+          name="type"
+          placeholder="Type"
+        />
       </mat-form-field>
     </div>
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput ngModel #price="ngModel" [(ngModel)]="data.price" name="price" placeholder="Price">
+        <input
+          matInput
+          ngModel
+          #price="ngModel"
+          [(ngModel)]="data.price"
+          name="price"
+          placeholder="Price"
+        />
       </mat-form-field>
     </div>
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput ngModel #image="ngModel" [(ngModel)]="data.image" name="image" placeholder="Image">
+        <input
+          matInput
+          ngModel
+          #image="ngModel"
+          [(ngModel)]="data.image"
+          name="image"
+          placeholder="Image"
+        />
       </mat-form-field>
     </div>
 
     <div mat-dialog-actions>
-      <button mat-button [type]="submit" [disabled]="!formControl.valid" [mat-dialog-close]="1" (click)="confirmAdd()">Save</button>
+      <button
+        mat-button
+        [type]="submit"
+        [disabled]="!formControl.valid"
+        [mat-dialog-close]="1"
+        (click)="confirmAdd()"
+      >
+        Save
+      </button>
       <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
     </div>
   </form>
