--- a/client/frontapp/src/app/admin/main/main.component.html
+++ b/client/frontapp/src/app/admin/main/main.component.html
@@ -1,2 +1,6 @@
-<p>main works!</p>
-<router-outlet> </router-outlet>
+<mat-sidenav-container class="admin-container">
+  <mat-toolbar color="primary">
+    <span>Admin Dashboard</span> <span class="spacer"></span>
+  </mat-toolbar>
+  <router-outlet> </router-outlet>
+</mat-sidenav-container>
