Display part fixed

--- a/client/frontapp/src/app/user/menutab/menutab.component.html
+++ b/client/frontapp/src/app/user/menutab/menutab.component.html
@@ -11,7 +11,7 @@
         <div class="menuInner">
           <div class="menu-name">{{ dish.name }}</div>
           <div class="item"><img src="{{dish.image}}" /></div>
-          <div class="description">{{ dish.Description }}</div>
+          <div class="description">{{ dish.description }}</div>
           <div class="menu-footer" div fxLayout="row" fxLayoutAlign="end none">
             <button
               mat-raised-button
