--- a/client/frontapp/src/app/admin/order/orderdetails/orderdetails.component.html
+++ b/client/frontapp/src/app/admin/order/orderdetails/orderdetails.component.html
@@ -1,3 +1,20 @@
-<div>
-  {{myData | json}}
-</div>
+<mat-card class="example-card">
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>Order By: {{ myData.user.name }}</mat-card-title>
+    <mat-card-subtitle>Address: {{ myData.user.address }}</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <p>
+      <mat-list>
+        <mat-list-item *ngFor="let orderline of myData.orderline"
+          >Item: {{ orderline.dish }} {{ orderline.Type }}
+          {{ orderline.size }} Qty: {{ orderline.qty }}</mat-list-item
+        >
+      </mat-list>
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>Delete</button> <button mat-button>Update</button>
+  </mat-card-actions>
+</mat-card>
