--- a/client/frontapp/src/app/user/toolbar/toolbar.component.scss
+++ b/client/frontapp/src/app/user/toolbar/toolbar.component.scss
@@ -29,7 +29,7 @@
     color: white;
   }
   .menucolor {
-    color:  #b54f2a;
+    color: #b54f2a;
   }
 }
 
@@ -123,4 +123,8 @@
 .mat-toolbar-row,
 .mat-toolbar-single-row {
   height: 64px;
+}
+.welcome {
+  color: white;
+  padding: 25px;
 }
